--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,11 +3,18 @@ framework:
     secret: '%env(APP_SECRET)%'
 
     # Note that the session will be started ONLY if you read or write from it.
-    session: true
+    session:
+        cookie_httponly: true
+        cookie_samesite: lax
+        cookie_secure: false
+        handler_id: null
+        gc_maxlifetime: 86400
+        save_path: '%kernel.project_dir%/var/sessions'
+        cookie_domain: 'localhost'
     http_method_override: true
-
     #esi: true
     #fragments: true
+    
 
 when@test:
     framework:
