--- a/compose.yaml
+++ b/compose.yaml
@@ -29,8 +29,10 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       DATABASE_URL: mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@database:3306/${MYSQL_DATABASE}?serverVersion=8&charset=utf8mb4
-      VIRTUAL_HOST: vault.91.166.39.12.nip.io
-      VIRTUAL_PORT: 80
+      VIRTUAL_HOST: ${VIRTUAL_HOST}
+      LETSENCRYPT_HOST: ${LETSENCRYPT_HOST}
+      LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
+      VIRTUAL_PORT: ${VIRTUAL_PORT}
     depends_on:
       database:
        condition: service_healthy
